// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-icon prop 1`] = `
"<view class=\\"nut-uploader\\">
  <!--v-if-->
  <view class=\\"nut-uploader__upload picture\\">
    <photograph color=\\"#808080\\"></photograph><input class=\\"nut-uploader__input\\" type=\\"file\\" accept=\\"*\\" name=\\"file\\">
  </view>
</view>"
`;

exports[`render preview image 1`] = `
"<view class=\\"nut-uploader\\" modelvalue=\\"[object Object],[object Object],[object Object]\\">
  <!--v-if-->
  <view class=\\"nut-uploader__upload picture\\">
    <photograph color=\\"#808080\\"></photograph><input class=\\"nut-uploader__input\\" type=\\"file\\" accept=\\"*\\" name=\\"file\\">
  </view>
</view>"
`;
